       The gamma-power mixture is though a different copula.  


Version 2.1.3--July 1, 2019
1. Added documention in lcomCOP() stating that Chine and Benatia (2017) describe
       trimmed L-comoments as the multivariate extensions of the univariate
       trimmed L-moments. Unknown as to whether an extension jump should be made.
2. Added iterated Farlie-Gumbel-Morgenstern copula as FGMrcop(), which is any more
       useful than the existing generalization, but Chine and Benatia (2017) concern
       themselves with the iterated FGM.
3. Documentation audit again with tiny changes to many Rds.
4. Added glueCOP() as another means of constructing other copulas.
5. BUG FIX: EMPIRqua.regress() and EMPIRqua.regress2() with lowess=TRUE could return
       probabilities outside of [0,1]. Truncation to zero and unity is now made.
6. Warning Fix: EMPIRgridderinv()/EMPIRgridderinv2() in their calls to approx() could
       trigger warnings about ties and deletion of them. We know therein that the
       x values are ordered, so a switch was made to use ties="ordered" in approx().
       Also, "F" was being used as the nonexceedance probability but R syntax
       highlighting treats as FALSE, so switch made to FF. By association, the
       EMPIRqua.regress()/EMPIRqua.regress2() also need the ties="ordered" in their
       use of the approx() on the inversion of the gridded derivative of the empirical 
       copula.
7. Added an as.list() check to the empirical grid argument in both pairs of 
       EMPIRgridder()/EMPIRgridder2() and EMPIRgridderinv()/EMPIRgridderinv2().
8. BUG FIX: Through an audit of EMPIRcop.Rd examples, which then found that the 
       Bernstein argument to pass through lower-level dispatch to level.curvesCOP()
       did not work. The ability for the para argument in EMPIRcop() now properly
       supports the ability to trigger ctype and the bernstein arguments through
       list embedment.