@@ -466,7 +466,7 @@ Version 2.1.3--July 1, 2019
 1. Added documention in lcomCOP() stating that Chine and Benatia (2017) describe
        trimmed L-comoments as the multivariate extensions of the univariate
        trimmed L-moments. Unknown as to whether an extension jump should be made.
-2. Added iterated Farlie-Gumbel-Morgenstern copula as FGMrcop(), which is any more
+2. Added iterated Farlie-Gumbel-Morgenstern copula as FGMrcop(), which is not any more
        useful than the existing generalization, but Chine and Benatia (2017) concern
        themselves with the iterated FGM.
 3. Documentation audit again with tiny changes to many Rds.
@@ -521,6 +521,8 @@ Version 2.1.5--
          warning("found nonfinite values on row|column=",i," in grid derivative")
        The author has encountered one data set that produces NaN on two rows and
        trying to understand how and why this is happening.
+10. Extended the EMPIRcop() with a checker-board empirical copula, which is a type
+       of light smooth and adapted from the copula package.
 
 
 POTENTIAL TODOs:
@@ -559,7 +561,8 @@ EMPIRcopdf() can be replaced by EMPIRcop() as the later is fully
 stabtaildepf.Rd --- Need to audit stabtaildepf.Rd and complete documentation.
 Beirlant, J., Escobar-Bach, M., Goegebeur, Y., Guillou, A.: Bias-corrected estimation of stable tail dependence function. J. Multivar. Anal. 143, 453–466 (2016)
 https://doi.org/10.1016/j.jmva.2015.10.006
-Kiriliouk, A., Segers, J. & Tafakori, L. Extremes (2018) 21: 581. https://doi.org/10.1007/s10687-018-0315-y
+Kiriliouk, A., Segers, J. & Tafakori, L. Extremes (2018) 21: 581.
+https://doi.org/10.1007/s10687-018-0315-y
 
 Implementation of state-of-the-practice nonparametric estimators of
   lower and upper tail dependence parameters. Neither of the three books
